lustre/llite/llite_internal.h
@@ -1436,7 +1436,6 @@ struct ll_statahead_info {
 						 */
 	unsigned int            sai_ls_all:1,   /* "ls -al", do stat-ahead for
 						 * hidden entries */
-				sai_agl_valid:1,/* AGL is valid for the dir */
 				sai_in_readpage:1;/* statahead is in readdir()*/
 	wait_queue_head_t	sai_waitq;	/* stat-ahead wait queue */
 	struct task_struct	*sai_task;	/* stat-ahead thread */
